--- a/sinatra_app/views/input.erb
+++ b/sinatra_app/views/input.erb
@@ -3,6 +3,7 @@
   <link href="./public/css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
+  <a href="http://0.0.0.0:9292">Back to Home</a>
   <h1>This is the student input form</h1>
   <form method="post" action="input">
     <p>What is your name? <input type="text" name="name" value="name"></p>
