--- a/sinatra_app/views/students.erb
+++ b/sinatra_app/views/students.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="./public/css/index.css" type="text/css" rel="stylesheet">
+  <link href="./public/css/bootstrap.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <a href="http://0.0.0.0:9292">Back to Home</a>
