--- a/sinatra_app/views/input.erb
+++ b/sinatra_app/views/input.erb
@@ -1,10 +1,16 @@
+<!DOCTYPE html>
 <html>
 <head>
-  <link href="./public/css/index.css" type="text/css" rel="stylesheet">
+  <link href="../public/css/test.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <a href="http://0.0.0.0:9292">Back to Home</a>
   <h1>This is the student input form</h1>
+<div class="container">
+  <div class="row">
+    <div class="span4">
+      <h1><em>The Student Input Form</em></h1>
+      <hr>
   <form method="post" action="input">
     <p>What is your name? <input type="text" name="name" value="name"></p>
     <p>What is your tagline? <input type="text" name="tagline" value="tagline"></p>
@@ -18,7 +24,10 @@
     <p>What are your favorite apps? <input type="text" name="fave_apps" value="favorite apps"></p>
     <p>What are your favorite companies? <input type="text" name="companies" value="companies"></p>
     <p>What are your favorite quotes? <input type="text" name="quotes" value="quotes"></p>
-    <input type="submit" value="Submit">
+    <input type="submit" value="  Submit Here " class="btn btn-primary">
   </form>
+    </div>
+  </div>
+</div>
 </body>
 </html>
