changed links to relative paths

--- a/views/input.erb
+++ b/views/input.erb
@@ -4,7 +4,7 @@
   <link href="../public/css/test.css" type="text/css" rel="stylesheet">
 </head>
 <body>
-  <a href="http://0.0.0.0:9292">Back to Home</a>
+  <a href="/">Back to Home</a>
   <h1>This is the student input form</h1>
 <div class="container">
   <div class="row">
