--- a/views/students.erb
+++ b/views/students.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="./public/css/bootstrap.css" type="text/css" rel="stylesheet">
+  <link href="./css/bootstrap.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <a href="/">Back to Home</a>
