--- a/views/edit.erb
+++ b/views/edit.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="../css/test.css" type="text/css" rel="stylesheet">
+  <link href="../css/edit.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <a href="/">Back to Home</a>
