--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,7 @@
 </head>
 <body>
   <h1>This is the main index page</h1>
-  <p><a href="/input" >Input a New Student!</a></p>
+  <p><a href="/edit" >Input a New Student!</a></p>
   <p><a href="/find/by-name" >Find an Existing Student!</a></p>
 </body>
 </html>
