--- a/views/search_result.erb
+++ b/views/search_result.erb
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <link href="./css/index.css" type="text/css" rel="stylesheet">
+  <link href="../css/index.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <a href="/">Back to Home</a>
