linked up student profile page with stylings

--- a/views/profile_html.erb
+++ b/views/profile_html.erb
@@ -46,7 +46,7 @@
       <div class="columns">
         <div class="one_third">
           <div id="img_mask"></div>
-          <div class=<%= @student.image %>>
+          <div class=<%= @student.profile_image %>>
       <!--     # <img src="images/ana_profile.png" height="auto" width="300px" alt="Sample Image">
        -->  </div>
         <div class="two_third last">
