--- a/views/profile_html.erb
+++ b/views/profile_html.erb
@@ -61,9 +61,12 @@
 
           <div class="social_icons">
             <ul>
-              <li><a href="http://anabecker.tumblr.com"><i class="icon-globe"></a></i></li>
+              <% @student.social_links.split("~").each do |s| %>
+              <li><a href="<%= s %>"><%= s %></a></li>
+              <%end%>
+              <!-- <li><a href="http://anabecker.tumblr.com"><i class="icon-globe"></a></i></li>
               <li><a href="http://www.twitter.com/ana_becker"><i class="icon-twitter"></a></i></li>
-              <li><a href="http://www.linkedin.com/profile/view?id=98941330"><i class="icon-linkedin"></a></i></li>
+              <li><a href="http://www.linkedin.com/profile/view?id=98941330"><i class="icon-linkedin"></a></i></li> -->
             </ul>
           </div>
 
@@ -83,15 +86,21 @@
         <div class="one_half">
           <h3>Work</h3>
           <ul class="check_style">
-            <li><a href="http://www.scrollmotion.com">Mobile App Design at ScrollMotion</a></li>
+              <% @student.prevwork.split("~").each do |s| %>
+              <li><%= s %></li>
+              <%end%>
+<!--             <li><a href="http://www.scrollmotion.com">Mobile App Design at ScrollMotion</a></li>
             <li><a href="http://www.infographics.com">Infographics Design at Infographics.com</a></li>
-            <li><a href="http://www.wsj.com">Design/Tech intern at WSJ.com</a></li>
+            <li><a href="http://www.wsj.com">Design/Tech intern at WSJ.com</a></li> -->
           </ul>
         </div>
         <div class="one_half last">
           <h3>Education</h3>
           <ul class="check_style">
-            <li><a href="www.cooper.edu">Cooper Union for the Advancement of Science and Art</a><p>Concentration in graphic design</p></li>
+              <% @student.education.split("~").each do |s| %>
+              <li><a href="<%= s %>"><%= s %></a></li>
+              <%end%>
+<!--             <li><a href="www.cooper.edu">Cooper Union for the Advancement of Science and Art</a><p>Concentration in graphic design</p></li> -->
           </ul>
         </div>
       </div>
@@ -225,20 +234,21 @@
 
 <script src="js/custom.js" type="text/javascript"></script>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 
-  var _gaq = _gaq || [];
-  _gaq.push(['_setAccount', 'UA-33578770-1']);
-  _gaq.push(['_setDomainName', 'flatironschool.com']);
-  _gaq.push(['_trackPageview']);
+//   var _gaq = _gaq || [];
+//   _gaq.push(['_setAccount', 'UA-33578770-1']);
+//   _gaq.push(['_setDomainName', 'flatironschool.com']);
+//   _gaq.push(['_trackPageview']);
 
-  (function() {
-    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-  })();
+//   (function() {
+//     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+//     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+//     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+//   })();
 
-</script>
+// </script> -->
+
 <!--/border-->
 <div id="left-border"></div>
 <div id="right-border"></div>
